# simple-tauri-practice

./: README.md
calculator-example/: COPYRIGHT.md  README.md
calculator-example/src/: index.html  main.js  styles.css
calculator-example/src-tauri/: Cargo.toml  tauri.conf.json
calculator-example/src-tauri/src/: main.rs
hello-world-template/: README.md
hello-world-template/src/: index.html  main.js
hello-world-template/src-tauri/src/: main.rs
