[package]
name = "calculator-example"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5.3", features = ["shell-open", "tracing"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
devtools = "0.2"

[features]
custom-protocol = ["tauri/custom-protocol"]

