[package]
name = "calculator-example"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5.3", features = ["shell-open", "tracing"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
devtools = "0.2"
cargo-packager-updater = "0.1"



[features]
custom-protocol = ["tauri/custom-protocol"]

[package.metadata.packager]
before-packaging-command = "cargo tauri build"
product-name = "Tauri example (with updater)"
identifier = "com.mycalcc.example"
resources = [
  "Cargo.toml",
  "../../README.md",
  "icons/*",
  "src",
  { src = "src-ui/assets/tauri.svg", target = "path/to/tauri.svg" },
  { src = "src-ui", target = "path/to/src-ui" },
  { src = "src-ui/assets/*", target = "public" },
]
icons = [
  "icons/32x32.png",
  "icons/128x128.png",
  "icons/128x128@2x.png",
  "icons/icon.icns",
  "icons/icon.ico",
]

[package.metadata.packager.deb]
depends = ["libgtk-3-0", "libwebkit2gtk-4.1-0", "libayatana-appindicator3-1"]

[package.metadata.packager.appimage]
bins = ["/usr/bin/xdg-open"]
libs = [
  "WebKitNetworkProcess",
  "WebKitWebProcess",
  "libwebkit2gtkinjectedbundle.so",
  "libayatana-appindicator3.so.1",
]

[package.metadata.packager.appimage.linuxdeploy-plugins]
"gtk" = "https://raw.githubusercontent.com/tauri-apps/linuxdeploy-plugin-gtk/master/linuxdeploy-plugin-gtk.sh"

